Show live backup status in the back up now button when a backup is running. Show free disk space after total used by backups. Some langauge changes. Work around the 1 cron every 60 seconds limit. Store backup status in a 2 hour transient as a last ditch attempt to work around the "stuck on backup running" issue. Show a warning and disable backups when PHP is in Safe Mode. Highlight defined Constants. Show defaults for all Constants. Show a warning if both HMBKP_FILES_ONLY and HMBKP_DATABASE_ONLY are defined at the same time. Make sure options added in 1.1.4 are cleared on de-activate.
git-svn-id: https://plugins.svn.wordpress.org/backupwordpress/trunk@378520 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/hmbkp.css
+++ b/assets/hmbkp.css
@@ -4,8 +4,12 @@
 tfoot p { margin: 0; font-weight: normal; }
 #hmbkp_advanced-options { display: none; }
 #hmbkp_advanced-options dl { overflow: hidden; margin: 20px 0; }
-#hmbkp_advanced-options dt { float: left; width: 250px; clear: both; border-top: 1px solid #DFDFDF; padding: 7px 0; }
-#hmbkp_advanced-options dd { color: #666; margin-left: 250px;  border-top: 1px solid #DFDFDF; padding: 7px 0; }
+#hmbkp_advanced-options dt { float: left; width: 250px; clear: both; padding: 6px 0; margin: 1px 0; }
+#hmbkp_advanced-options dd { color: #666; padding: 7px 0 7px 250px; border-top: 1px solid #DFDFDF; margin: 0; }
+#hmbkp_advanced-options dd:last-child { border-bottom: 1px solid #DFDFDF; }
 .hmbkp_manage_backups_row .delete { color: #BC0B0B; }
 .hmbkp_manage_backups_row .delete:hover { color: red; }
 .completed th, .completed td { background-color: #FFFFE0; }
+.hmbkp_active:before { content: "\00a0 \2713 "; font-size: 11px; }
+.hmbkp_active, .hmbkp_active code, #hmbkp_advanced-options .hmbkp_active + dd { background: #E5F7E8; }
+#hmbkp_advanced-options dt:not(.hmbkp_active) + dd { background: #F9F9F9; }
